exports[`no-lonely-if > invalid(1): if (a) {\n\tif (b) {\n\t}\n} 1`] = `

  1 | if (a) {
  2 | 	if (b) {
  3 | 	}
  4 | }

`;

exports[`no-lonely-if > invalid(1): if (a) {\n\tif (b) {\n\t}\n} 2`] = `

Message:
  1 | if (a) {
> 2 | 	if (b) {
    | 	^^^^^^^^
> 3 | 	}
    | ^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.
  4 | }

Output:
  1 | if (a && b) {
  2 | 	}

`;

exports[`no-lonely-if > invalid(10): async function foo() {\n\tif (a)\n\tif (await a)\n\tif (a.b)\n\tif (a && b);\n} 1`] = `

  1 | async function foo() {
  2 | 	if (a)
  3 | 	if (await a)
  4 | 	if (a.b)
  5 | 	if (a && b);
  6 | }

`;

exports[`no-lonely-if > invalid(10): async function foo() {\n\tif (a)\n\tif (await a)\n\tif (a.b)\n\tif (a && b);\n} 2`] = `

Message:
  1 | async function foo() {
  2 | 	if (a)
> 3 | 	if (await a)
    | 	^^^^^^^^^^^^
> 4 | 	if (a.b)
    | ^^^^^^^^^
> 5 | 	if (a && b);
    | ^^^^^^^^^^^^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.
  6 | }

Output:
  1 | async function foo() {
  2 | 	if (a && await a)
  3 | 	if (a.b)
  4 | 	if (a && b);
  5 | }

`;

exports[`no-lonely-if > invalid(10): async function foo() {\n\tif (a)\n\tif (await a)\n\tif (a.b)\n\tif (a && b);\n} 3`] = `

Message:
  1 | async function foo() {
  2 | 	if (a)
  3 | 	if (await a)
> 4 | 	if (a.b)
    | 	^^^^^^^^
> 5 | 	if (a && b);
    | ^^^^^^^^^^^^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.
  6 | }

Output:
  1 | async function foo() {
  2 | 	if (a)
  3 | 	if (await a && a.b)
  4 | 	if (a && b);
  5 | }

`;

exports[`no-lonely-if > invalid(10): async function foo() {\n\tif (a)\n\tif (await a)\n\tif (a.b)\n\tif (a && b);\n} 4`] = `

Message:
  1 | async function foo() {
  2 | 	if (a)
  3 | 	if (await a)
  4 | 	if (a.b)
> 5 | 	if (a && b);
    | 	^^^^^^^^^^^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.
  6 | }

Output:
  1 | async function foo() {
  2 | 	if (a)
  3 | 	if (await a)
  4 | 	if (a.b && a && b);
  5 | }

`;

exports[`no-lonely-if > invalid(11): if (((a || b))) if (((c || d))); 1`] = `

  1 | if (((a || b))) if (((c || d)));

`;

exports[`no-lonely-if > invalid(11): if (((a || b))) if (((c || d))); 2`] = `

Message:
> 1 | if (((a || b))) if (((c || d)));
    |                 ^^^^^^^^^^^^^^^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.

Output:
  1 | if (((a || b)) && ((c || d)));

`;

exports[`no-lonely-if > invalid(12): if // 1\n(\n\t// 2\n\ta // 3\n\t\t.b // 4\n) // 5\n{\n\t// 6\n\tif (\n\t\t// 7\n\t\tc // 8\n\t\t\t.d // 9\n\t) {\n\t\t// 10\n\t\tfoo();\n\t\t// 11\n\t}\n\t// 12\n} 1`] = `

   1 | if // 1
   2 | (
   3 | 	// 2
   4 | 	a // 3
   5 | 		.b // 4
   6 | ) // 5
   7 | {
   8 | 	// 6
   9 | 	if (
  10 | 		// 7
  11 | 		c // 8
  12 | 			.d // 9
  13 | 	) {
  14 | 		// 10
  15 | 		foo();
  16 | 		// 11
  17 | 	}
  18 | 	// 12
  19 | }

`;

exports[`no-lonely-if > invalid(12): if // 1\n(\n\t// 2\n\ta // 3\n\t\t.b // 4\n) // 5\n{\n\t// 6\n\tif (\n\t\t// 7\n\t\tc // 8\n\t\t\t.d // 9\n\t) {\n\t\t// 10\n\t\tfoo();\n\t\t// 11\n\t}\n\t// 12\n} 2`] = `

Message:
   1 | if // 1
   2 | (
   3 | 	// 2
   4 | 	a // 3
   5 | 		.b // 4
   6 | ) // 5
   7 | {
   8 | 	// 6
>  9 | 	if (
     | 	^^^^
> 10 | 		// 7
     | ^^^^^^
> 11 | 		c // 8
     | ^^^^^^^^
> 12 | 			.d // 9
     | ^^^^^^^^^^
> 13 | 	) {
     | ^^^^
> 14 | 		// 10
     | ^^^^^^^
> 15 | 		foo();
     | ^^^^^^^^
> 16 | 		// 11
     | ^^^^^^^
> 17 | 	}
     | ^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.
  18 | 	// 12
  19 | }

Output:
   1 | // 6
   2 | 	if // 1
   3 | (
   4 | 	// 2
   5 | 	a // 3
   6 | 		.b // 4
   7 |  && 
   8 | 		// 7
   9 | 		c // 8
  10 | 			.d // 9
  11 | 	) // 5
  12 |  {
  13 | 		// 10
  14 | 		foo();
  15 | 		// 11
  16 | 	
  17 | 	// 12
  18 | }

`;

exports[`no-lonely-if > invalid(13): if (a) {\n\tif (b) foo()\n}\n[].forEach(bar) 1`] = `

  1 | if (a) {
  2 | 	if (b) foo()
  3 | }
  4 | [].forEach(bar)

`;

exports[`no-lonely-if > invalid(13): if (a) {\n\tif (b) foo()\n}\n[].forEach(bar) 2`] = `

Message:
  1 | if (a) {
> 2 | 	if (b) foo()
    | 	^^^^^^^^^^^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.
  3 | }
  4 | [].forEach(bar)

Output:
  1 | if (a && b) foo();
  2 | [].forEach(bar)

`;

exports[`no-lonely-if > invalid(14): if (a)\n\tif (b) foo()\n;[].forEach(bar) 1`] = `

  1 | if (a)
  2 | 	if (b) foo()
  3 | ;[].forEach(bar)

`;

exports[`no-lonely-if > invalid(14): if (a)\n\tif (b) foo()\n;[].forEach(bar) 2`] = `

Message:
  1 | if (a)
> 2 | 	if (b) foo()
    | 	^^^^^^^^^^^^
> 3 | ;[].forEach(bar)
    | ^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.

Output:
  1 | if (a && b) foo()
  2 | ;[].forEach(bar)

`;

exports[`no-lonely-if > invalid(15): if (a) {\n\tif (b) foo()\n}\n;[].forEach(bar) 1`] = `

  1 | if (a) {
  2 | 	if (b) foo()
  3 | }
  4 | ;[].forEach(bar)

`;

exports[`no-lonely-if > invalid(15): if (a) {\n\tif (b) foo()\n}\n;[].forEach(bar) 2`] = `

Message:
  1 | if (a) {
> 2 | 	if (b) foo()
    | 	^^^^^^^^^^^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.
  3 | }
  4 | ;[].forEach(bar)

Output:
  1 | if (a && b) foo()
  2 | ;[].forEach(bar)

`;

exports[`no-lonely-if > invalid(16): if (a) /* comment */ {\n\tif (b) foo()\n} 1`] = `

  1 | if (a) /* comment */ {
  2 | 	if (b) foo()
  3 | }

`;

exports[`no-lonely-if > invalid(16): if (a) /* comment */ {\n\tif (b) foo()\n} 2`] = `

Message:
  1 | if (a) /* comment */ {
> 2 | 	if (b) foo()
    | 	^^^^^^^^^^^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.
  3 | }

Output:
  1 | /* comment */ if (a && b) foo()

`;

exports[`no-lonely-if > invalid(2): if (a) if (b) {\n\tfoo();\n} 1`] = `

  1 | if (a) if (b) {
  2 | 	foo();
  3 | }

`;

exports[`no-lonely-if > invalid(2): if (a) if (b) {\n\tfoo();\n} 2`] = `

Message:
> 1 | if (a) if (b) {
    |        ^^^^^^^^
> 2 | 	foo();
    | ^^^^^^^
> 3 | }
    | ^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.

Output:
  1 | if (a && b) {
  2 | 	foo();
  3 | }

`;

exports[`no-lonely-if > invalid(3): if (a) {\n\tif (b) foo();\n} 1`] = `

  1 | if (a) {
  2 | 	if (b) foo();
  3 | }

`;

exports[`no-lonely-if > invalid(3): if (a) {\n\tif (b) foo();\n} 2`] = `

Message:
  1 | if (a) {
> 2 | 	if (b) foo();
    | 	^^^^^^^^^^^^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.
  3 | }

Output:
  1 | if (a && b) foo();

`;

exports[`no-lonely-if > invalid(4): if (a) /* comment */ {\n\tif (b) foo();\n} 1`] = `

  1 | if (a) /* comment */ {
  2 | 	if (b) foo();
  3 | }

`;

exports[`no-lonely-if > invalid(4): if (a) /* comment */ {\n\tif (b) foo();\n} 2`] = `

Message:
  1 | if (a) /* comment */ {
> 2 | 	if (b) foo();
    | 	^^^^^^^^^^^^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.
  3 | }

Output:
  1 | /* comment */ if (a && b) foo();

`;

exports[`no-lonely-if > invalid(5): if (a) if (b) foo(); 1`] = `

  1 | if (a) if (b) foo();

`;

exports[`no-lonely-if > invalid(5): if (a) if (b) foo(); 2`] = `

Message:
> 1 | if (a) if (b) foo();
    |        ^^^^^^^^^^^^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.

Output:
  1 | if (a && b) foo();

`;

exports[`no-lonely-if > invalid(6): if (a) {\n\tif (b) foo()\n} 1`] = `

  1 | if (a) {
  2 | 	if (b) foo()
  3 | }

`;

exports[`no-lonely-if > invalid(6): if (a) {\n\tif (b) foo()\n} 2`] = `

Message:
  1 | if (a) {
> 2 | 	if (b) foo()
    | 	^^^^^^^^^^^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.
  3 | }

Output:
  1 | if (a && b) foo()

`;

exports[`no-lonely-if > invalid(7): if (a) if (b); 1`] = `

  1 | if (a) if (b);

`;

exports[`no-lonely-if > invalid(7): if (a) if (b); 2`] = `

Message:
> 1 | if (a) if (b);
    |        ^^^^^^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.

Output:
  1 | if (a && b);

`;

exports[`no-lonely-if > invalid(8): if (a) {\n\tif (b) {\n\t\t// Should not report\n\t}\n} else if (c) {\n\tif (d) {\n\t}\n} 1`] = `

  1 | if (a) {
  2 | 	if (b) {
  3 | 		// Should not report
  4 | 	}
  5 | } else if (c) {
  6 | 	if (d) {
  7 | 	}
  8 | }

`;

exports[`no-lonely-if > invalid(8): if (a) {\n\tif (b) {\n\t\t// Should not report\n\t}\n} else if (c) {\n\tif (d) {\n\t}\n} 2`] = `

Message:
  1 | if (a) {
  2 | 	if (b) {
  3 | 		// Should not report
  4 | 	}
  5 | } else if (c) {
> 6 | 	if (d) {
    | 	^^^^^^^^
> 7 | 	}
    | ^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.
  8 | }

Output:
  1 | if (a) {
  2 | 	if (b) {
  3 | 		// Should not report
  4 | 	}
  5 | } else if (c && d) {
  6 | 	}

`;

exports[`no-lonely-if > invalid(9): function * foo() {\n\tif (a || b)\n\tif (a ?? b)\n\tif (a ? b : c)\n\tif (a = b)\n\tif (a += b)\n\tif (a -= b)\n\tif (a &&= b)\n\tif (yield a)\n\tif (a, b);\n} 1`] = `

   1 | function * foo() {
   2 | 	if (a || b)
   3 | 	if (a ?? b)
   4 | 	if (a ? b : c)
   5 | 	if (a = b)
   6 | 	if (a += b)
   7 | 	if (a -= b)
   8 | 	if (a &&= b)
   9 | 	if (yield a)
  10 | 	if (a, b);
  11 | }

`;

exports[`no-lonely-if > invalid(9): function * foo() {\n\tif (a || b)\n\tif (a ?? b)\n\tif (a ? b : c)\n\tif (a = b)\n\tif (a += b)\n\tif (a -= b)\n\tif (a &&= b)\n\tif (yield a)\n\tif (a, b);\n} 2`] = `

Message:
   1 | function * foo() {
   2 | 	if (a || b)
>  3 | 	if (a ?? b)
     | 	^^^^^^^^^^^
>  4 | 	if (a ? b : c)
     | ^^^^^^^^^^^^^^^
>  5 | 	if (a = b)
     | ^^^^^^^^^^^
>  6 | 	if (a += b)
     | ^^^^^^^^^^^^
>  7 | 	if (a -= b)
     | ^^^^^^^^^^^^
>  8 | 	if (a &&= b)
     | ^^^^^^^^^^^^^
>  9 | 	if (yield a)
     | ^^^^^^^^^^^^^
> 10 | 	if (a, b);
     | ^^^^^^^^^^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.
  11 | }

Output:
   1 | function * foo() {
   2 | 	if ((a || b) && (a ?? b))
   3 | 	if (a ? b : c)
   4 | 	if (a = b)
   5 | 	if (a += b)
   6 | 	if (a -= b)
   7 | 	if (a &&= b)
   8 | 	if (yield a)
   9 | 	if (a, b);
  10 | }

`;

exports[`no-lonely-if > invalid(9): function * foo() {\n\tif (a || b)\n\tif (a ?? b)\n\tif (a ? b : c)\n\tif (a = b)\n\tif (a += b)\n\tif (a -= b)\n\tif (a &&= b)\n\tif (yield a)\n\tif (a, b);\n} 3`] = `

Message:
   1 | function * foo() {
   2 | 	if (a || b)
   3 | 	if (a ?? b)
>  4 | 	if (a ? b : c)
     | 	^^^^^^^^^^^^^^
>  5 | 	if (a = b)
     | ^^^^^^^^^^^
>  6 | 	if (a += b)
     | ^^^^^^^^^^^^
>  7 | 	if (a -= b)
     | ^^^^^^^^^^^^
>  8 | 	if (a &&= b)
     | ^^^^^^^^^^^^^
>  9 | 	if (yield a)
     | ^^^^^^^^^^^^^
> 10 | 	if (a, b);
     | ^^^^^^^^^^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.
  11 | }

Output:
   1 | function * foo() {
   2 | 	if (a || b)
   3 | 	if ((a ?? b) && (a ? b : c))
   4 | 	if (a = b)
   5 | 	if (a += b)
   6 | 	if (a -= b)
   7 | 	if (a &&= b)
   8 | 	if (yield a)
   9 | 	if (a, b);
  10 | }

`;

exports[`no-lonely-if > invalid(9): function * foo() {\n\tif (a || b)\n\tif (a ?? b)\n\tif (a ? b : c)\n\tif (a = b)\n\tif (a += b)\n\tif (a -= b)\n\tif (a &&= b)\n\tif (yield a)\n\tif (a, b);\n} 4`] = `

Message:
   1 | function * foo() {
   2 | 	if (a || b)
   3 | 	if (a ?? b)
   4 | 	if (a ? b : c)
>  5 | 	if (a = b)
     | 	^^^^^^^^^^
>  6 | 	if (a += b)
     | ^^^^^^^^^^^^
>  7 | 	if (a -= b)
     | ^^^^^^^^^^^^
>  8 | 	if (a &&= b)
     | ^^^^^^^^^^^^^
>  9 | 	if (yield a)
     | ^^^^^^^^^^^^^
> 10 | 	if (a, b);
     | ^^^^^^^^^^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.
  11 | }

Output:
   1 | function * foo() {
   2 | 	if (a || b)
   3 | 	if (a ?? b)
   4 | 	if ((a ? b : c) && (a = b))
   5 | 	if (a += b)
   6 | 	if (a -= b)
   7 | 	if (a &&= b)
   8 | 	if (yield a)
   9 | 	if (a, b);
  10 | }

`;

exports[`no-lonely-if > invalid(9): function * foo() {\n\tif (a || b)\n\tif (a ?? b)\n\tif (a ? b : c)\n\tif (a = b)\n\tif (a += b)\n\tif (a -= b)\n\tif (a &&= b)\n\tif (yield a)\n\tif (a, b);\n} 5`] = `

Message:
   1 | function * foo() {
   2 | 	if (a || b)
   3 | 	if (a ?? b)
   4 | 	if (a ? b : c)
   5 | 	if (a = b)
>  6 | 	if (a += b)
     | 	^^^^^^^^^^^
>  7 | 	if (a -= b)
     | ^^^^^^^^^^^^
>  8 | 	if (a &&= b)
     | ^^^^^^^^^^^^^
>  9 | 	if (yield a)
     | ^^^^^^^^^^^^^
> 10 | 	if (a, b);
     | ^^^^^^^^^^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.
  11 | }

Output:
   1 | function * foo() {
   2 | 	if (a || b)
   3 | 	if (a ?? b)
   4 | 	if (a ? b : c)
   5 | 	if ((a = b) && (a += b))
   6 | 	if (a -= b)
   7 | 	if (a &&= b)
   8 | 	if (yield a)
   9 | 	if (a, b);
  10 | }

`;

exports[`no-lonely-if > invalid(9): function * foo() {\n\tif (a || b)\n\tif (a ?? b)\n\tif (a ? b : c)\n\tif (a = b)\n\tif (a += b)\n\tif (a -= b)\n\tif (a &&= b)\n\tif (yield a)\n\tif (a, b);\n} 6`] = `

Message:
   1 | function * foo() {
   2 | 	if (a || b)
   3 | 	if (a ?? b)
   4 | 	if (a ? b : c)
   5 | 	if (a = b)
   6 | 	if (a += b)
>  7 | 	if (a -= b)
     | 	^^^^^^^^^^^
>  8 | 	if (a &&= b)
     | ^^^^^^^^^^^^^
>  9 | 	if (yield a)
     | ^^^^^^^^^^^^^
> 10 | 	if (a, b);
     | ^^^^^^^^^^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.
  11 | }

Output:
   1 | function * foo() {
   2 | 	if (a || b)
   3 | 	if (a ?? b)
   4 | 	if (a ? b : c)
   5 | 	if (a = b)
   6 | 	if ((a += b) && (a -= b))
   7 | 	if (a &&= b)
   8 | 	if (yield a)
   9 | 	if (a, b);
  10 | }

`;

exports[`no-lonely-if > invalid(9): function * foo() {\n\tif (a || b)\n\tif (a ?? b)\n\tif (a ? b : c)\n\tif (a = b)\n\tif (a += b)\n\tif (a -= b)\n\tif (a &&= b)\n\tif (yield a)\n\tif (a, b);\n} 7`] = `

Message:
   1 | function * foo() {
   2 | 	if (a || b)
   3 | 	if (a ?? b)
   4 | 	if (a ? b : c)
   5 | 	if (a = b)
   6 | 	if (a += b)
   7 | 	if (a -= b)
>  8 | 	if (a &&= b)
     | 	^^^^^^^^^^^^
>  9 | 	if (yield a)
     | ^^^^^^^^^^^^^
> 10 | 	if (a, b);
     | ^^^^^^^^^^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.
  11 | }

Output:
   1 | function * foo() {
   2 | 	if (a || b)
   3 | 	if (a ?? b)
   4 | 	if (a ? b : c)
   5 | 	if (a = b)
   6 | 	if (a += b)
   7 | 	if ((a -= b) && (a &&= b))
   8 | 	if (yield a)
   9 | 	if (a, b);
  10 | }

`;

exports[`no-lonely-if > invalid(9): function * foo() {\n\tif (a || b)\n\tif (a ?? b)\n\tif (a ? b : c)\n\tif (a = b)\n\tif (a += b)\n\tif (a -= b)\n\tif (a &&= b)\n\tif (yield a)\n\tif (a, b);\n} 8`] = `

Message:
   1 | function * foo() {
   2 | 	if (a || b)
   3 | 	if (a ?? b)
   4 | 	if (a ? b : c)
   5 | 	if (a = b)
   6 | 	if (a += b)
   7 | 	if (a -= b)
   8 | 	if (a &&= b)
>  9 | 	if (yield a)
     | 	^^^^^^^^^^^^
> 10 | 	if (a, b);
     | ^^^^^^^^^^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.
  11 | }

Output:
   1 | function * foo() {
   2 | 	if (a || b)
   3 | 	if (a ?? b)
   4 | 	if (a ? b : c)
   5 | 	if (a = b)
   6 | 	if (a += b)
   7 | 	if (a -= b)
   8 | 	if ((a &&= b) && (yield a))
   9 | 	if (a, b);
  10 | }

`;

exports[`no-lonely-if > invalid(9): function * foo() {\n\tif (a || b)\n\tif (a ?? b)\n\tif (a ? b : c)\n\tif (a = b)\n\tif (a += b)\n\tif (a -= b)\n\tif (a &&= b)\n\tif (yield a)\n\tif (a, b);\n} 9`] = `

Message:
   1 | function * foo() {
   2 | 	if (a || b)
   3 | 	if (a ?? b)
   4 | 	if (a ? b : c)
   5 | 	if (a = b)
   6 | 	if (a += b)
   7 | 	if (a -= b)
   8 | 	if (a &&= b)
   9 | 	if (yield a)
> 10 | 	if (a, b);
     | 	^^^^^^^^^^ Unexpected \`if\` as the only statement in a \`if\` block without \`else\`.
  11 | }

Output:
   1 | function * foo() {
   2 | 	if (a || b)
   3 | 	if (a ?? b)
   4 | 	if (a ? b : c)
   5 | 	if (a = b)
   6 | 	if (a += b)
   7 | 	if (a -= b)
   8 | 	if (a &&= b)
   9 | 	if ((yield a) && (a, b));
  10 | }

`;
